# gltf_decimation

./: Cargo.toml
assets/: output.glb  test.glb  test1.glb
src/: main copy 3.rs  main copy.rs  main.rs  main_HashSet.rs  main_ref.rs
