[package]
name = "decimation_gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
json = "0.12.4"
serde_json = {version = "1.0.114", features = ["preserve_order"]}
nalgebra = "0.32.5"
indexmap = {version = "2.2.6", features = ["serde"]}
